# BananaForge

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml
docs/: 3mf_export_guide.md  cli-reference.md  configuration.md  installation.md  troubleshooting.md
src/bananaforge/: __main__.py  cli.py
src/bananaforge/core/: __init__.py  enhanced_optimizer.py  loss.py  optimizer.py
src/bananaforge/image/: __init__.py  christofides.py  filters.py  heightmap.py  processor.py  transparency_detector.py  transparency_notifier.py  transparency_reporter.py
src/bananaforge/materials/: base_layer_optimizer.py  database.py  gradient_processor.py  manager.py  matcher.py  optimizer.py  transparency_integration.py  transparency_mixer.py  transparency_optimizer.py
src/bananaforge/output/: bambu_gcode.py  bambu_thumbnails.py  export_types.py  exporter.py  instructions.py  mesh.py  model_xml.py  package_xml.py  stl_generator.py  threemf_exporter.py  validation.py
src/bananaforge/utils/: color.py  config.py  device.py  visualization.py
tests/: test_3mf_export.py  test_3mf_validation.py  test_basic_functionality.py  test_feature4_advanced_stl_generation.py  test_ordered_color_layers.py  test_story1_png_transparency_detection.py  test_story2_2_webp_modern_formats.py  test_story2_gif_transparency_detection.py  test_story3_alpha_distribution_analysis.py  test_story4_1_transparency_messages.py  test_story4_2_transparency_statistics.py  test_story5_1_cli_transparency_flags.py  test_story5_2_backward_compatibility.py  test_story6_imageprocessor_enhancement.py  test_story7_cli_integration.py  test_story7_comprehensive_transparency_coverage.py
