[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bananaforge"
version = "0.1.0"
description = "AI-powered multi-layer 3D printing optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BananaForge Team", email = "info@bananaforge.com"}
]
keywords = ["3d-printing", "optimization", "multi-layer", "image-to-3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "opencv-python>=4.7.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "trimesh>=3.15.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
    "colorlog>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "joblib>=1.2.0",
    "scikit-image>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
bananaforge = "bananaforge.cli:main"

[project.urls]
Homepage = "https://github.com/sarsey-walker/BananaForge"
Repository = "https://github.com/sarsey-walker/BananaForge"
Documentation = "https://github.com/sarsey-walker/BananaForge/tree/main/docs"
"Bug Tracker" = "https://github.com/sarsey-walker/BananaForge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
